[Offline Pages] Adding missing image/CSS detection in FrameSerializer.

Adding interfaces of problem detectors which are going to be used for UMA
collecting for offline pages.

See go/offline-pages-problems-metric for more information.

BUG=730233

Review-Url: https://codereview.chromium.org/2886943003
Cr-Commit-Position: refs/heads/master@{#479180}

Former-commit-id: df3595bb1db14d038879823a24b60e9e284c861c