content/renderer/render_frame_impl.cc
@@ -645,6 +645,10 @@ class MHTMLPartsGenerationDelegate
     return params_.mhtml_popup_overlay_removal;
   }
 
+  bool UsePageProblemDetectors() override {
+    return params_.mhtml_problem_detection;
+  }
+
  private:
   const FrameMsg_SerializeAsMHTML_Params& params_;
   std::set<std::string>* serialized_resources_uri_digests_;
